<resources>
    <string name="app_name">QuanLyNhaTro</string>
    <string name="brand_name">QuanLyNhaTro</string>
    <string name="notifications_desc">Thông báo</string>
    <string name="search_hint_tenant">Tìm kiếm khách thuê...</string>
    <string name="search_desc">Tìm kiếm</string>
    <string name="filter_all">Tất cả</string>
    <string name="filter_rented">Đã thuê</string>
    <string name="filter_available">Chưa thuê</string>
    <string name="add_tenant_desc">Thêm khách thuê mới</string>
    <string name="add_room_desc">Thêm phòng mới</string>
    <string name="search_hint_room">Tìm kiếm phòng...</string>
    <string name="logo_text">QL</string>
    <string name="title_add_tenant">Thêm khách mới</string>
    <string name="section_rental_info">Thông tin thuê</string>
    <string name="section_representative_info">Thông tin người đại diện</string>
    <string name="hint_select_room">Chọn phòng</string>
    <string name="hint_start_date">Ngày bắt đầu</string>
    <string name="hint_deposit">Tiền cọc</string>
    <string name="hint_full_name">Họ tên</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_id_card">CCCD/CMND</string>
    <string name="hint_address">Địa chỉ thường trú</string>
    <string name="btn_save">Lưu thông tin</string>
    <string name="title_room_detail">Chi tiết phòng</string>
    <string name="label_price_month">/ tháng</string>
    <string name="status_renting">Đang thuê</string>
    <string name="label_representative">Người đại diện</string>
    <string name="btn_meter_reading_short">Chốt\nĐiện Nước</string>
    <string name="btn_collect_money">Thu\nTiền</string>
    <string name="btn_report_issue">Báo\nHỏng</string>
    <string name="label_contract_info">Thông tin hợp đồng</string>
    <string name="label_deposit">Tiền cọc</string>
    <string name="label_move_in_date">Ngày vào ở</string>
    <string name="label_expiry_date">Hết hạn</string>
    <string name="desc_back">Quay lại</string>
    <string name="desc_edit">Chỉnh sửa</string>
    <string name="desc_tenant_avatar">Ảnh đại diện khách thuê</string>
    <string name="desc_phone_icon">Icon điện thoại</string>
    <string name="sample_room_name">Phòng 101</string>
    <string name="sample_price">3.500.000đ</string>
    <string name="sample_tenant_name">Nguyễn Văn A</string>
    <string name="sample_phone">0901234567</string>
    <string name="sample_move_in_date">01/01/2026</string>
    <string name="sample_expiry_date">01/07/2026</string>
    <string name="title_add_room">Thêm phòng mới</string>
    <string name="hint_room_name">Tên phòng (ví dụ: 101)</string>
    <string name="hint_floor">Tầng</string>
    <string name="hint_price">Giá thuê / tháng</string>
    <string name="hint_area">Diện tích (m²)</string>
    <string name="label_room_status">Trạng thái phòng</string>
    <string name="status_available">Trống (Sẵn sàng)</string>
    <string name="status_maintenance">Đang sửa chữa</string>
    <string name="section_basic_info">Thông tin cơ bản</string>
    <string name="section_services">Dịch vụ mặc định</string>
    <string name="hint_electricity_price">Giá điện (đ/kWh)</string>
    <string name="hint_water_price">Giá nước (đ/m³)</string>
    <string name="title_contract_detail">Chi tiết hợp đồng</string>
    <string name="label_contract_code">Mã HD</string>
    <string name="label_start_date">Ngày bắt đầu</string>
    <string name="label_end_date">Ngày kết thúc</string>
    <string name="section_financial">Thông tin tài chính</string>
    <string name="label_rent_price_month">Giá thuê / tháng</string>
    <string name="label_payment_cycle">Kỳ thanh toán</string>
    <string name="label_payment_monthly">Hàng tháng (Ngày 05)</string>
    <string name="section_tenant_rep">Người thuê (Chủ hộ)</string>
    <string name="label_id_number">CCCD/CMND</string>
    <string name="btn_extend_contract">Gia hạn hợp đồng</string>
    <string name="btn_terminate_contract">Thanh lý hợp đồng</string>
    <string name="desc_call_tenant">Gọi cho khách thuê</string>
    <string name="status_active">Đang hiệu lực</string>

</resources>